--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Name</title>
-  </head>
-  <body>
 
-  
-    <script src="js/d3.v7.min.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Howard Huang</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous|Fredoka">
+  <link rel="stylesheet" href="./src/stylesheet.css">
+</head>
+
+<body>
+  <div class="container" style="height: 300px">
+
+    <div class="section"><h1>My name is Howard</h1>
+  <p>I am a student at Harvard College. I am a first-year living in Grays.</p>
+  <p>I am a member of the Harvard College Class of 2026.</p>
+  <p>At Harvard, I intend to concentrate in Applied Mathematics.</p>
+</div>
+  <div class="section"><h3>My Picture:</h3>
+  <img src="./src/profile.jpg" width="200px"></div>
+
+</div>
+  <div class="container" style="height: 200px">
+    <div class="list" style="left: 10vw;">
+      <h3>Fun Facts:</h3>
+      <li>I like coding</li>
+      <li>I like Datamatch <img src="./src/datamatch.png" height="12px"></li>
+      <li>I like playing the piano</li>
+      <li>I like using Github</li>
+    </div>
+
+    <div class="list" style="right: 10vw;">
+      <h3>My Links:</h3>
+      <li>Email: <a href="mailto:howardhuang@college.harvard.edu" class="link">howardhuang@college.harvard.edu</a></li>
+      <li>Personal Website: <a href="https://perpetualowl.github.io/" class="link">https://perpetualowl.github.io/</a></li>
+      <li>Github: <a href="https://github.com/PerpetualOwl" class="link">https://github.com/PerpetualOwl</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/howardhuang04/" class="link">https://www.linkedin.com/in/howardhuang04/</a></li>
+    </div>
+  </div>
+  <div class="bounds">
+    <a href="mailto:howardhuang@college.harvard.edu" class="link button"><div>CONTACT ME</div></a>
+  </div>
+
+
+  <script src="js/d3.v7.min.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
