added some graphics

--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -26,15 +26,15 @@
       <li>I like coding</li>
       <li>I like Datamatch <img src="./src/datamatch.png" height="12px"></li>
       <li>I like playing the piano</li>
-      <li>I like using Github</li>
+      <li>I like using Github <img src="./src/github.png" height="12px"></li>
     </div>
 
     <div class="list" style="right: 10vw;">
       <h3>My Links:</h3>
-      <li>Email: <a href="mailto:howardhuang@college.harvard.edu" class="link">howardhuang@college.harvard.edu</a></li>
-      <li>Personal Website: <a href="https://perpetualowl.github.io/" class="link">https://perpetualowl.github.io/</a></li>
-      <li>Github: <a href="https://github.com/PerpetualOwl" class="link">https://github.com/PerpetualOwl</a></li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/howardhuang04/" class="link">https://www.linkedin.com/in/howardhuang04/</a></li>
+      <li><a href="mailto:howardhuang@college.harvard.edu" class="link"><img src="./src/email.png" height="12px"> howardhuang@college.harvard.edu</a></li>
+      <li><a href="https://perpetualowl.github.io/" class="link"><img src="./src/web.png" height="12px"> https://perpetualowl.github.io/</a></li>
+      <li><a href="https://github.com/PerpetualOwl" class="link"><img src="./src/github.png" height="12px"> https://github.com/PerpetualOwl</a></li>
+      <li><a href="https://www.linkedin.com/in/howardhuang04/" class="link"><img src="./src/linkedin.png" height="12px"> https://www.linkedin.com/in/howardhuang04/</a></li>
     </div>
   </div>
   <div class="bounds">
