--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -5,10 +5,16 @@
   <meta charset="UTF-8" />
   <title>Howard Huang</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous|Fredoka">
-  <link rel="stylesheet" href="./src/stylesheet.css">
+  <link rel="stylesheet" href="./css/stylesheet.css">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 </head>
 
+<header id="headerjs"></header>
+<script type="text/javascript">$("#headerjs").load("loaded.html #header");</script>
+
 <body>
+  <div class="spacer"></div>
   <div class="container" style="height: 300px">
 
     <div class="section"><h1>My name is Howard</h1>
@@ -17,24 +23,24 @@
   <p>At Harvard, I intend to concentrate in Applied Mathematics.</p>
 </div>
   <div class="section"><h3>My Picture:</h3>
-  <img src="./src/profile.jpg" width="200px"></div>
+  <img src="./img/profile.jpg" width="200px"></div>
 
 </div>
   <div class="container" style="height: 200px">
     <div class="list" style="left: 10vw;">
       <h3>Fun Facts:</h3>
       <li>I like coding</li>
-      <li>I like Datamatch <img src="./src/datamatch.png" height="12px"></li>
+      <li>I like Datamatch <img src="./img/datamatch.png" height="12px"></li>
       <li>I like playing the piano</li>
-      <li>I like using Github <img src="./src/github.png" height="12px"></li>
+      <li>I like using Github <img src="./img/github.png" height="12px"></li>
     </div>
 
     <div class="list" style="right: 10vw;">
       <h3>My Links:</h3>
-      <li><a href="mailto:howardhuang@college.harvard.edu" class="link"><img src="./src/email.png" height="12px"> howardhuang@college.harvard.edu</a></li>
-      <li><a href="https://perpetualowl.github.io/" class="link"><img src="./src/web.png" height="12px"> https://perpetualowl.github.io/</a></li>
-      <li><a href="https://github.com/PerpetualOwl" class="link"><img src="./src/github.png" height="12px"> https://github.com/PerpetualOwl</a></li>
-      <li><a href="https://www.linkedin.com/in/howardhuang04/" class="link"><img src="./src/linkedin.png" height="12px"> https://www.linkedin.com/in/howardhuang04/</a></li>
+      <li><a href="mailto:howardhuang@college.harvard.edu" class="link"><img src="./img/email.png" height="12px"> howardhuang@college.harvard.edu</a></li>
+      <li><a href="https://perpetualowl.github.io/" class="link"><img src="./img/web.png" height="12px"> https://perpetualowl.github.io/</a></li>
+      <li><a href="https://github.com/PerpetualOwl" class="link"><img src="./img/github.png" height="12px"> https://github.com/PerpetualOwl</a></li>
+      <li><a href="https://www.linkedin.com/in/howardhuang04/" class="link"><img src="./img/linkedin.png" height="12px"> https://www.linkedin.com/in/howardhuang04/</a></li>
     </div>
   </div>
   <div class="bounds">
