--- a/Assignment-1/loaded.html
+++ b/Assignment-1/loaded.html
@@ -14,8 +14,8 @@
             role="banner" class="navigation">
             <div class="nav-container"></a>
 
-                    <nav><a href="/index.html"
-                            class="nav-item">HOME</a><a href="/data.html"
+                    <nav><a href="index.html"
+                            class="nav-item">HOME</a><a href="data.html"
                             class="nav-item">DATA</a></nav>
                 <a href="mailto:howardhuang@college.harvard.edu" class="link button">
                     <div>CONTACT ME</div>
