--- a/Assignment-1/data.html
+++ b/Assignment-1/data.html
@@ -16,14 +16,20 @@
 <body>
     <div class="spacer"></div>
     <div class="container" style="height: 200px">
-        
-        <div class="section"><h2>Starting Part 2! We're Learning D3</h2>
-        <div id="dynamic-content"><p>...I give you the mausoleum of all hope and desire...I give it to you not that you may remember time, but that you might forget it now and then for a moment and not spend all of your breath trying to conquer it. Because no battle is ever won he said. They are not even fought. The field only reveals to man his own folly and despair, and victory is an illusion of philosophers and fools.</p>
-        <p><em>The Sound and the Fury</em>, William Faulkner</p>
-        <svg width="500" height="500"><circle cx="25" cy="25" r="25"/><circle cx="250" cy="25" r="25"/></svg>
+
+        <div class="section" style="height: 1000px; width: 550px">
+            <h2>Starting Part 2! We're Learning D3</h2>
+            <div id="dynamic-content">
+                <p>...I give you the mausoleum of all hope and desire...I give it to you not that you may remember time,
+                    but that you might forget it now and then for a moment and not spend all of your breath trying to
+                    conquer it. Because no battle is ever won he said. They are not even fought. The field only reveals
+                    to man his own folly and despair, and victory is an illusion of philosophers and fools.</p>
+                <p><em>The Sound and the Fury</em>, William Faulkner</p>
+            </div>
+            <svg id="svg" height=500 width=500></svg>
+        </div>
     </div>
-    </div>
-    </div>
+    
 
     <script src="js/d3.v7.min.js"></script>
     <script src="js/main.js"></script>
