finished assignment1 xD

--- a/Assignment-1/data.html
+++ b/Assignment-1/data.html
@@ -26,10 +26,16 @@
                     to man his own folly and despair, and victory is an illusion of philosophers and fools.</p>
                 <p><em>The Sound and the Fury</em>, William Faulkner</p>
             </div>
-            <svg id="svg" height=500 width=500></svg>
+
         </div>
     </div>
-    
+    <div class="spacer"></div>
+    <div class="container" style="height: 200px">
+
+        <svg id="svg" height=500 width=500></svg>
+        <svg id="svg2" height=550 width=700></svg>
+    </div>
+
 
     <script src="js/d3.v7.min.js"></script>
     <script src="js/main.js"></script>
