--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -17,15 +17,18 @@
   <div class="spacer"></div>
   <div class="container" style="height: 300px">
 
-    <div class="section"><h1>My name is Howard</h1>
-  <p>I am a student at Harvard College. I am a first-year living in Grays.</p>
-  <p>I am a member of the Harvard College Class of 2026.</p>
-  <p>At Harvard, I intend to concentrate in Applied Mathematics.</p>
-</div>
-  <div class="section"><h3>My Picture:</h3>
-  <img src="./img/profile.jpg" width="200px"></div>
+    <div class="section">
+      <h1>My name is Howard</h1>
+      <p>I am a student at Harvard College. I am a first-year living in Grays.</p>
+      <p>I am a member of the Harvard College Class of 2026.</p>
+      <p>At Harvard, I intend to concentrate in Applied Mathematics.</p>
+    </div>
+    <div class="section">
+      <h3>My Picture:</h3>
+      <img src="./img/profile.jpg" width="200px">
+    </div>
 
-</div>
+  </div>
   <div class="container" style="height: 200px">
     <div class="list" style="left: 10vw;">
       <h3>Fun Facts:</h3>
@@ -37,14 +40,20 @@
 
     <div class="list" style="right: 10vw;">
       <h3>My Links:</h3>
-      <li><a href="mailto:howardhuang@college.harvard.edu" class="link"><img src="./img/email.png" height="12px"> howardhuang@college.harvard.edu</a></li>
-      <li><a href="https://perpetualowl.github.io/" class="link"><img src="./img/web.png" height="12px"> https://perpetualowl.github.io/</a></li>
-      <li><a href="https://github.com/PerpetualOwl" class="link"><img src="./img/github.png" height="12px"> https://github.com/PerpetualOwl</a></li>
-      <li><a href="https://www.linkedin.com/in/howardhuang04/" class="link"><img src="./img/linkedin.png" height="12px"> https://www.linkedin.com/in/howardhuang04/</a></li>
+      <li><a href="mailto:howardhuang@college.harvard.edu" class="link"><img src="./img/email.png" height="12px">
+          howardhuang@college.harvard.edu</a></li>
+      <li><a href="https://perpetualowl.github.io/" class="link"><img src="./img/web.png" height="12px">
+          https://perpetualowl.github.io/</a></li>
+      <li><a href="https://github.com/PerpetualOwl" class="link"><img src="./img/github.png" height="12px">
+          https://github.com/PerpetualOwl</a></li>
+      <li><a href="https://www.linkedin.com/in/howardhuang04/" class="link"><img src="./img/linkedin.png" height="12px">
+          https://www.linkedin.com/in/howardhuang04/</a></li>
     </div>
   </div>
   <div class="bounds">
-    <a href="mailto:howardhuang@college.harvard.edu" class="link button"><div>CONTACT ME</div></a>
+    <a href="mailto:howardhuang@college.harvard.edu" class="link button">
+      <div>CONTACT ME</div>
+    </a>
   </div>
 
 
