--- a/Assignment-1/data.html
+++ b/Assignment-1/data.html
@@ -33,8 +33,10 @@
     <div class="container" style="height: 200px">
 
         <svg id="svg" height=500 width=500></svg>
-        <div><div id="tooltip" style="opacity: 0;"></div>
-        <svg id="svg2" height=550 width=700></svg></div>
+        <div>
+            <div id="tooltip" style="opacity: 0;"></div>
+            <svg id="svg2" height=550 width=700></svg>
+        </div>
     </div>
 
 
