--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -6,12 +6,20 @@
   <title>Howard Huang</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous|Fredoka">
   <link rel="stylesheet" href="./css/stylesheet.css">
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 </head>
 
-<header id="headerjs"></header>
-<script type="text/javascript">$("#headerjs").load("loaded.html #header");</script>
+<header>
+  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
+    role="banner" class="navigation">
+    <div class="nav-container"></a>
+      <nav><a href="index.html" class="nav-item">HOME</a><a href="data.html" class="nav-item">DATA</a></nav>
+      <a href="mailto:howardhuang@college.harvard.edu" class="link button">
+        <div>CONTACT ME</div>
+      </a>
+    </div>
+  </div>
+</header>
+
 
 <body>
   <div class="spacer"></div>
