--- a/datamatch-comp-final-project/index.html
+++ b/datamatch-comp-final-project/index.html
@@ -24,21 +24,28 @@
 
 <body>
     <div class="spacer"></div>
-  <div class="container" style="height: 100px">
-    <h1>The following is an interesting full fledged visualization hopefully</h1>
-</div>
-<div class="container" style="height: 500px">
-    <div id="menu">
-    <div id="menu-items">
-      <!-- I made these divs instead of links so you can click on mobile to view the effect -->
-      <div class="menu-item text">Menu1</div>
-      <div class="menu-item text">Menu2</div>
-      <div class="menu-item text">Menu3</div>
-      <div class="menu-item text">Menu4</div>
+    <div class="container" style="height: 100px">
+        <h1>The following is an interesting full fledged visualization hopefully</h1>
     </div>
-    <div id="menu-background-pattern"></div>
-  </div>
-</div>
+    <div class="container" style="height: 500px">
+        <div id="menu">
+            <div id="menu-items">
+                <!-- I made these divs instead of links so you can click on mobile to view the effect -->
+                <div class="menu-item text">Menu1</div>
+                <div class="menu-item text">Menu2</div>
+                <div class="menu-item text">Menu3</div>
+                <div class="menu-item text">Menu4</div>
+            </div>
+            <div id="menu-background-pattern"></div>
+            <div id="background-pattern-hitbox"></div>
+        </div>
+    </div>
+    <div class="container" style="height: 500px">
+    <div id="vis1"></div>
+    <div id="vis2"></div>
+    <div id="vis3"></div>
+    <div id="vis4"></div>
+    </div>
     <script src="d3.min.js"></script>
     <script src="main.js"></script>
 </body>
