--- a/datamatch-comp-final-project/index.html
+++ b/datamatch-comp-final-project/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./stylesheet.css">
 </head>
 
+<!--
 <header>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
         role="banner" class="navigation">
@@ -19,11 +20,15 @@
         </div>
     </div>
 </header>
+-->
 
 <html>
 
 <body>
+    <!--
     <div class="spacer"></div>
+    -->
+
     <div class="container" style="height: 100px">
         <h1>The following is an interesting full fledged visualization hopefully</h1>
     </div>
@@ -40,12 +45,15 @@
             <div id="background-pattern-hitbox"></div>
         </div>
     </div>
+    <div class="spacer"></div>
     <div class="container" style="height: 500px">
     <div id="vis1"></div>
     <div id="vis2"></div>
     <div id="vis3"></div>
     <div id="vis4"></div>
+    <div id="my_dataviz"></div>
     </div>
+    <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3.layout.cloud.js"></script>
     <script src="d3.min.js"></script>
     <script src="main.js"></script>
 </body>
